# kachiclash

./: .eslintrc.js  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc  .prettierrc.yml  Cargo.toml  Dockerfile  GRAPHQL_API.md  GRAPHQL_IMPLEMENTATION.md  GRAPHQL_OVERVIEW.md  LICENSE  LOGIN_UPDATES.md  README.md  build.rs  dev.secret  dev.sh.example  eslint.config.js  install.sh  kachiclash-levelone.service  kachiclash.service  kachiclash.sublime-project  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
.nova/: Configuration.json
.nova/Tasks/: Cargo.json
.zed/: settings.json
art/: 2021 site icon scaled 512.pxd  Player-Rankings layers.pxd
examples/: graphql_client.js  graphql_demo.html  validate_schema.rs
public/: app.webmanifest  basho.js
public/fonts/: stylesheet.css
public/img2/: 2021-BG.pxd
public/img2/banzuke/: 2021-Player-Rankings3.pxd  Wood-BG.pxd
public/js/: admin.js  base.js  base.ts  basho.js  count_down.js  edit_basho.js  list_players.js  new_basho.js  notification-settings.ts  player.js  player.ts  service-client.ts  service-worker.ts  settings.ts  torikumi.js  torikumi.ts
public/scss/: _media.scss  admin.scss  base.scss  basho.scss  heya.scss  index.scss  login.scss  player.scss  settings.scss  stats.scss
public/ts/: admin.ts  base.ts  basho-admin.ts  basho.ts  edit_basho.ts  heya.ts  login.ts  push.ts  service-client.ts  service-worker.ts  settings.ts  torikumi.ts
scripts/: Dockerfile  Sumo Banzuke Process J.sublime-macro  Sumo Banzuke Process M.sublime-macro  admin-picks.sh  backup.sh  dev.sh.example  docker-build  install-beta.sh  install.sh  kachiclash-beta.service  kachiclash-levelone.service  kachiclash.service  log.sh
scss/: _media.scss  admin.scss  base.scss  basho.scss  index.scss  login.scss  new_basho.scss  player.scss  settings.scss  stats.scss
sql/: 20191026-init.sql  20191102-basho-score.sql  20191103-player-google.sql  20191104-player-info.sql  20191105-external-link.sql  20191106-pick-rikishi-id.sql  20191106-player-reddit.sql  20191108-player-name-nocase.sql  20191129-basho-result.sql  20200202-external-basho-result.sql  20200210-yurikat.sql  20210103-kyujo.sql  20230226-player-push-subscriptions.sql  20230605-player_rank.sql  20240725-heya.sql  blank.sqlite  merge-players.sql
src/: lib.rs  main.rs  server.rs
src/api/: mod.rs
src/data/: award.rs  basho.rs  basho_id.rs  heya.rs  leaders.rs  mod.rs  player.rs  push.rs  rank.rs  schema.rs
src/graphql/: mod.rs  schema.rs  types.rs
src/handlers/: admin.rs  askama_responder.rs  basho.rs  graphql.rs  heya.rs  index.rs  login.rs  mod.rs  player.rs  push.rs  settings.rs  stats.rs  user_agent.rs  webhook.rs
src/poll/: basho_alert.rs  basho_prelude.rs  daily_results.rs  mod.rs
src/util/: mod.rs  vec.rs
templates/: admin.html  admin_page.html  base.html  basho.html  basho_list.html  edit_basho.html  heya.html  heya_list.html  index.html  list_players.html  login.html  new_basho.html  notification_settings.html  player.html  player_listing.html  rules.html  settings.html  stats.html  torikumi.html
var/: dev.pem
