[package]
name = "kachiclash"
version = "1.0.0"
authors = ["Daniel Dickison <kachiclash@danieldickison.com>"]
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
actix-identity = "0.8.0"
actix-files = "0.6"
async-trait = "0.1"
url = "2.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3"
envconfig = "0.11.0"
log = "0.4"
pretty_env_logger = "0.5"
chrono = "0.4"
itertools = "0.13.0"
result = "1.0"
regex = "1.4"
lazy_static = "1.4"
rand = "0.8"
oauth2 = "4.1"
anyhow = "1.0"
num_cpus = "1.13"
rinja_actix = "0.3.5"
slug_intl = "1.0.0-alpha.2"

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.actix-session]
version = "0.10.1"
features = ["cookie-session"]

[dependencies.rinja]
version = "0.3.5"
features = ["with-actix-web"]

[dependencies.rusqlite]
version = "0.32.1"
features = ["bundled", "chrono", "trace"]

[dependencies.reqwest]
version = "0.11"
features = ["gzip", "json"]

[dependencies.web-push]
version = "0.10"
default-features = false
features = ["hyper-client"]
