[package]
name = "kachiclash"
version = "1.0.0"
authors = ["Daniel Dickison <kachiclash@danieldickison.com>"]
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
actix-identity = "0.8.0"
actix-files = "0.6"
async-trait = "0.1.85"
url = "2.2"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.137"
futures = "0.3"
envconfig = "0.11.0"
log = "0.4.25"
pretty_env_logger = "0.5"
chrono = "0.4"
itertools = "0.14.0"
result = "1.0"
regex = "1.4"
rand = "0.8"
oauth2 = "4.1"
anyhow = "1.0"
num_cpus = "1.13"
askama = "0.13.0"
slug_intl = "1.0.0"
hmac-sha256 = "1.1.12"
base64 = "0.22.1"

[dependencies.tokio]
version = "1.43.1"
features = ["full"]

[dependencies.actix-session]
version = "0.10.1"
features = ["cookie-session"]

[dependencies.askama_web]
version = "0.13.0"
features = ["actix-web-4"]

[dependencies.rusqlite]
version = "0.33.0"
features = ["bundled", "chrono", "trace"]

[dependencies.reqwest]
version = "0.11.27"
features = ["gzip", "json"]

[dependencies.web-push]
version = "0.11.0"
default-features = false
features = ["hyper-client"]

[patch.crates-io]
web-push = { git = "https://github.com/danieldickison/rust-web-push.git", branch = "declarative-push" }
# path = "../rust-web-push"
