[package]
name = "kachiclash"
version = "1.0.0"
authors = ["Daniel Dickison <kachiclash@danieldickison.com>"]
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
actix-identity = "0.9.0"
actix-files = "0.6"
async-trait = "0.1.89"
url = "2.5"
serde = "1.0.228"
serde_derive = "1.0.217"
serde_json = "1.0.149"
futures = "0.3"
envconfig = "0.11.1"
log = "0.4.29"
pretty_env_logger = "0.5"
chrono = "0.4"
itertools = "0.14.0"
result = "1.0"
regex = "1.12"
rand = "0.9"
oauth2 = "5.0"
anyhow = "1.0"
num_cpus = "1.17"
askama = "0.15.4"
slug_intl = "1.0.0"
hmac-sha256 = "1.1.14"
base64 = "0.22.1"

[dependencies.tokio]
version = "1.49.0"
features = ["full"]

[dependencies.actix-session]
version = "0.11.0"
features = ["cookie-session"]

[dependencies.askama_web]
version = "0.15.1"
features = ["actix-web-4"]

[dependencies.rusqlite]
version = "0.38.0"
features = ["bundled", "chrono", "trace"]

[dependencies.reqwest]
version = "0.12.28"
features = ["gzip", "json"]

[dependencies.web-push]
version = "0.11.0"
default-features = false
features = ["hyper-client"]

[patch.crates-io]
web-push = { git = "https://github.com/danieldickison/rust-web-push.git", branch = "declarative-push" }
# path = "../rust-web-push"
